--- a/style.styl
+++ b/style.styl
@@ -1,2 +1,8 @@
+// Colors and font sizes
+@import './app/assets/styl/variables.styl'
+
+// Resets browser defaults
 @import './app/assets/styl/base.styl'
+
+// Component styling files
 @import './app/assets/styl/index.styl'
