--- a/app/assets/styl/index.styl
+++ b/app/assets/styl/index.styl
@@ -1,6 +1,7 @@
 // font-family: 'Prata', serif;
 // font-family: 'VT323', monospace;
 // font-family: 'Montserrat', sans-serif;
+// font-family: 'Source Code Pro', monospace;
 
 .portfolio-site {
   position: absolute;
@@ -13,9 +14,6 @@
 
 .nav {
   width: 100%
-  display: flex
-  flex-direction: row
-  justify-content: flex-start
 }
 
 .header {
@@ -23,110 +21,86 @@
   width: 100%
   height: 66%
   left: 10px
-  padding-top: 25px;
+  padding-top: 12px;
 
   .name {
     font-size: 1em;
     color: $darkest-grey;
     letter-spacing: 0.065em;
     font-family: 'Montserrat', sans-serif;
-    padding-left: 20px
+    padding-left: 40px
     text-align: left
   }
 
-  .ellipsis {
-    width: 30px
-    display: flex
-    flex-direction: row
-    justify-content: space-around
-
-    .dot {
-      width: 6px;
-      height: 6px;
-      border-radius: 50%;
-    }
+}
+.section {
+  position: fixed
+  right: 60px
+  top: 26px
+  font-family: 'Source Code Pro', monospace;
+  display: inline-block
+  font-size: 0.9em
+  &.art {
+    right: 273px
   }
 }
-.portfolio-img {
+.purpose {
   position: relative
-  overflow: hidden
-  height: 100%
+  font-size: 6.5vw
+  line-height: 0.78
+  color: $darkest-grey
+  text-align: right
+  font-family: 'VT323', monospace
+}
+.portfolio-img {
+  position: absolute
+  top: 9%
+  left: 33%
 }
 
 .sub-header {
-  display: flex
-  flex-direction: row
   height: 70%
-  align-items: flex-end
 
   .split-screen {
-    width: 50%
-    padding-left: 35px
-    height: 150%
-
+    padding-left: 20px
+    border-top: 7px solid #F7F7F7
 
     &:first-child {
-      padding-left: 22vw
+      width:20vw
       background: none
     }
   }
 
-  .purpose {
-    position: relative
-    font-size: 10vw
-    line-height: 0.78
-    color: $darkest-grey
-    width: 100%
-    border-bottom: 9px solid $darkest-grey
-    margin-bottom: 34px
-
-    padding-bottom: 12px
-    text-align: right
-    font-family: 'VT323', monospace
-  }
-
   .short-bio {
     position: relative
-    font-size: 2vw
+    margin-top: 100px
+    font-size: 1vw
     color: #3e4142;
     line-height: 1.8
     font-family: 'Montserrat', sans-serif;
     @media (min-width: 800px) {
-      font-size: 1em
+      font-size: 0.75em
     }
   }
 }
 
-.eye {
-  position: absolute;
-  width: 40vw;
-  height: 40vw;
-  background: rgba(251, 222, 222, 0.27);
-  border-radius: 50%;
-  top: -25vh;
-  left: 4vw;
-  z-index: -10
-  filter: blur(1px);
-  &.right {
-    left: 53vw;
-  }
-  &.middle {
-    top: 20vh
-    background: rgba(251, 251, 222, 0.27)
-    &.left {
-      background: rgba(222, 251, 235, 0.27)
-    }
-  }
-  &.bottom {
-    top: 65vh
-    background: rgba(222, 231, 251, 0.27)
+.social-wrapper {
+  padding-left: 20px
+  display: flex
+  flex-direction: column
+  .social-icon {
+    height: 1.3em
+    width: 1.3em
+    margin-bottom: 10px
+    fill: $darkest-grey
+
   }
 }
 
 footer {
   position: fixed
   background-color: white
-  height: 2.5vw
+  height: 7vh
   width: 100%
   bottom: 0
 }
