--- a/style.styl
+++ b/style.styl
@@ -4,5 +4,10 @@
 // Resets browser defaults
 @import './app/assets/styl/base.styl'
 
+// Theme base
+@import './app/assets/styl/global.styl'
+
 // Component styling files
 @import './app/assets/styl/index.styl'
+@import './app/assets/styl/social_bar.styl'
+@import './app/assets/styl/nav_bar.styl'
