--- a/app/assets/styl/index.styl
+++ b/app/assets/styl/index.styl
@@ -1,105 +1,17 @@
-// font-family: 'Prata', serif;
-// font-family: 'VT323', monospace;
-// font-family: 'Montserrat', sans-serif;
-// font-family: 'Source Code Pro', monospace;
-
-.portfolio-site {
-  position: absolute;
-  background-color: #f7f7f7
-  height: 100vh
-  width: 95vw
-  left: 2.5vw
-}
-
-.nav {
-  width: 100%
-}
-
-.header {
-  position: fixed
-  width: 100%
-  height: 66%
-  left: 10px
-  padding-top: 12px;
-
-  .name {
-    font-size: 1em;
-    color: $darkest-grey;
-    letter-spacing: 0.065em;
-    font-family: 'Montserrat', sans-serif;
-    padding-left: 40px
-    text-align: left
-  }
-
-}
-.section {
-  position: fixed
-  right: 60px
-  top: 26px
-  font-family: 'Source Code Pro', monospace;
+.short-bio {
   display: inline-block
-  font-size: 0.9em
-  &.art {
-    right: 273px
+  margin-top: 100px
+  font-size: 1em
+  color: #3e4142;
+  line-height: 1.8
+  font-family: 'Montserrat', sans-serif;
+  @media (min-width: 800px) {
+    font-size: 0.75em
   }
 }
-.purpose {
-  position: relative
-  font-size: 6.5vw
-  line-height: 0.78
-  color: $darkest-grey
-  text-align: right
-  font-family: 'VT323', monospace
-}
+
 .portfolio-img {
-  position: absolute
-  top: 9%
-  left: 33%
-}
-
-.sub-header {
-  height: 70%
-
-  .split-screen {
-    padding-left: 20px
-    border-top: 7px solid #F7F7F7
-
-    &:first-child {
-      width:20vw
-      background: none
-    }
-  }
-
-  .short-bio {
-    position: relative
-    margin-top: 100px
-    font-size: 1vw
-    color: #3e4142;
-    line-height: 1.8
-    font-family: 'Montserrat', sans-serif;
-    @media (min-width: 800px) {
-      font-size: 0.75em
-    }
-  }
-}
-
-.social-wrapper {
-  padding-left: 20px
-  display: flex
-  flex-direction: column
-  .social-icon {
-    height: 1.3em
-    width: 1.3em
-    margin-bottom: 10px
-    fill: $darkest-grey
-
-  }
-}
-
-footer {
-  position: fixed
-  background-color: white
-  height: 7vh
-  width: 100%
-  bottom: 0
+  margin: 70px 20px 0 0
+  padding-bottom: 30px
+  box-shadow: 0px 8px 12px 8px rgba(105,105,105,0.28);
 }
