whoops kitchen sink

--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -3,9 +3,22 @@
 // font-family: 'Montserrat', sans-serif;
 // font-family: 'Source Code Pro', monospace;
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'VT323', monospace;
+}
+h3 {
+  font-size: 1.3em
+  margin-bottom: 10px
+}
+
+p {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 0.8em;
+  line-height: 1.5;
+}
+
 .portfolio-site {
   background-color: #f7f7f7
-  height: 100vh
   margin: 0 20px
 }
 
