--- a/app/assets/styl/index.styl
+++ b/app/assets/styl/index.styl
@@ -1,14 +1,36 @@
 .short-bio {
-  color: #4D576D;
+  position: relative
+  background-color: $darkest-grey
+  color: #f7f7f7
   display: inline-block
   font-family: 'Source Code Pro', monospace;
   line-height: 1.5
-  margin-top: 30vh
-  width: 30vw
+  margin-top: 200px
+  padding: 5px 15px
+}
+
+.cta{
+  display: block
+  background-color: #aa99b9
+  color: #f7f7f7
+  display: inline-block
+  font-family: 'Source Code Pro', monospace;
+  line-height: 1.5
+  padding: 5px 15px
+}
+.interface {
+  height: 90vh
+  width: 100%
 }
 
 .portfolio-img {
+  position: absolute
+  right: 70px
   margin: 70px 20px 0 0
   padding: 0 10px 30px 10px
-  box-shadow: 0px 8px 12px 8px rgba(105,105,105,0.28);
 }
+
+.second-layer {
+  margin-top: 600px
+}
+
