--- a/app/assets/styl/nav_bar.styl
+++ b/app/assets/styl/nav_bar.styl
@@ -5,15 +5,15 @@
 .header {
   position: fixed
   width: 100%
-  height: 66%
+  height: 10%
   left: 10px
   padding-top: 12px;
 
   .name {
     font-size: 1em;
-    color: $darkest-grey;
-    letter-spacing: 0.065em;
-    font-family: 'Montserrat', sans-serif;
+    color: $darkest-grey
+    letter-spacing: 0.065em
+    font-family: 'Montserrat', sans-serif
     padding-left: 40px
     text-align: left
   }
@@ -21,11 +21,11 @@
 
 .section {
   position: fixed
-  right: 88px
-  top: 26px
-  font-family: 'Source Code Pro', monospace;
+  right: 85px
+  top: 28px
+  font-family: 'Montserrat', sans-serif
   font-size: 0.9em
   &.art {
-    right: 290px
+    right: 270px
   }
 }
