--- a/style.styl
+++ b/style.styl
@@ -11,3 +11,4 @@
 @import './app/assets/styl/index.styl'
 @import './app/assets/styl/social_bar.styl'
 @import './app/assets/styl/nav_bar.styl'
+@import './app/assets/styl/art_section.styl'
