add in stuff because i don't remember what i was doing

--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -6,17 +6,46 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: 'VT323', monospace;
 }
+h1 {
+  font-family: 'Prata', serif
+  font-size: 3em
+  margin-bottom: 10px
+}
+h2 {
+  font-family: 'VT323', monospace
+  font-size: 2.25em
+  margin-bottom: 10px
+}
 h3 {
-  font-size: 1.3em
+  font-family: 'Montserrat', sans-serif
+  font-size: 1.75em
+  margin-bottom: 24px
+}
+h4 {
+  font-size: 1.125em
+  margin-bottom: 10px
+}
+h5 {
+  font-size: 1em
+  margin-bottom: 10px
+}
+h6 {
+  font-family: 'Montserrat', sans-serif
+  letter-spacing: 1
+  color: #9977bd
+  font-size: 0.75em
   margin-bottom: 10px
 }
 
 p {
   font-family: 'Source Code Pro', monospace;
-  font-size: 0.8em;
+  font-size: 1em;
   line-height: 1.5;
 }
-
+li {
+  font-family: 'Montserrat', sans-serif
+  font-size: 1em;
+}
 .portfolio-site {
   background-color: #f7f7f7
   margin: 0 20px
