--- a/app/assets/styl/nav_bar.styl
+++ b/app/assets/styl/nav_bar.styl
@@ -16,6 +16,10 @@
     font-family: 'Montserrat', sans-serif
     padding-left: 40px
     text-align: left
+    a {
+      text-decoration: none
+      color: $darkest-grey
+    }
   }
 }
 
@@ -25,7 +29,11 @@
   top: 29px
   font-family: 'Montserrat', sans-serif
   font-size: 0.9em
-  &.art {
-    right: 270px
+  a {
+    text-decoration: none
+    color: $darkest-grey
+  }
+  &.art{
+    right: 228px
   }
 }
