--- a/app/assets/styl/art_section.styl
+++ b/app/assets/styl/art_section.styl
@@ -1,85 +1,122 @@
-.two {
+.gallery-header-row {
+  width: 100%
+  height: 8%
+}
+
+.indices {
+  position: relative
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+  align-content: flex-end
+}
+
+.portfolio-index {
+  width: 30px
+  margin: 10px
+}
+
+.selected-panel {
+  width: 100%
+  height: 60%
+}
+
+.gallery-wrapper {
+  margin-top: 20px
+  display: inline-block
+  position: absolute
+}
+
+.gallery {
+  position: relative
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+  align-content: flex-start
+}
+
+.portfolio-item {
+  height: 200px
+  margin: 0 10px
+}
+
+.portfolio-large {
+  display: inline-block
+  float: right
+  margin-right: 35px;
+
+
+}
+/*==================================================
+ * Effect 7
+ * ===============================================*/
+.effect7
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.effect7:before, .effect7:after
+{
+    content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:0;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.effect7:after
+{
+    right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+}
+
+.details-panel {
+  width: 45vw;
+  margin-top: 95px;
+}
+
+.sidebar {
+  margin-top: 20px
+  width: 20vw;
+  height: 30%
   display: inline-block
 
-  .gallery-header-row {
-    width: 100%
-    height: 8%
+  .sidebar-header {
+    color: #cccccc
+    font-size: 3em
   }
+  .filters {
 
-  .indices {
-    position: relative
-    display: flex
-    flex-wrap: wrap
-    justify-content: space-between
-    align-content: flex-end
   }
-
-  .portfolio-index {
-    width: 30px
-    margin: 10px
+  .filter-bullet {
+    padding-right: 8px
   }
-
-  .selected-panel {
-    width: 100%
-    height: 60%
-  }
-
-  .gallery-wrapper {
-    margin-top: 20px
-    display: inline-block
-    position: absolute
-  }
-
-  .gallery {
-    position: relative
-    display: flex
-    flex-wrap: wrap
-    justify-content: space-between
-    align-content: flex-start
-  }
-
-  .portfolio-item {
-    height: 200px
-    margin: 0 10px
-  }
-
-  .portfolio-large {
-    display: inline-block
-  }
-
-  .details-panel {
-    margin-left: 75px
-    width: 50%
-    display: inline-block
-    vertical-align: top
-  }
-
-  .sidebar {
-    margin-top: 20px
-    width: 20vw;
-    height: 30%
-    display: inline-block
-
-    .sidebar-header {
-      color: #cccccc
-      font-size: 3em
-    }
-    .filters {
-
-    }
-    .filter-bullet {
-      padding-right: 8px
-    }
-    .filter-option {
-      font-family: 'Source Code Pro', monospace
-      list-style-position: outside
-      font-size: 0.75em
-      margin-bottom: 8px
-      &:hover {
-        color: red
-      }
+  .filter-option {
+    font-family: 'Source Code Pro', monospace
+    list-style-position: outside
+    font-size: 0.75em
+    margin-bottom: 8px
+    border-bottom: 1px solid $darkest-grey
+    padding-bottom: 8px
+    &:hover {
+      color: #9977bd
+      box-shadow: 3px 3px #00ff5a
     }
   }
 }
+
 
 
