--- a/app/assets/styl/index.styl
+++ b/app/assets/styl/index.styl
@@ -11,7 +11,7 @@
 
 .cta{
   display: block
-  background-color: #aa99b9
+  background-color: #9977bd
   color: #f7f7f7
   display: inline-block
   font-family: 'Source Code Pro', monospace;
@@ -21,6 +21,7 @@
 
 .interface {
   height: 96vh
+  padding-top: 70px;
   width: 100%
 }
 
@@ -33,5 +34,23 @@
 
 .second-layer {
   margin-top: 600px
+}
+
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
 }
 
