Massive refactor post everything working.

--- a/app/assets/styl/index.styl
+++ b/app/assets/styl/index.styl
@@ -25,6 +25,15 @@
   width: 100%
 }
 
+.home-eyes {
+  position: absolute
+}
+
+.home-sketch {
+  position: absolute
+  left: 465px;
+}
+
 .portfolio-img {
   position: absolute
   right: 70px
@@ -53,4 +62,3 @@
   opacity: 0.01;
   transition: opacity 300ms ease-in;
 }
-
