--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -7,7 +7,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'VT323', monospace;
 }
 h1 {
-  font-family: 'Prata', serif
+  font-family: 'Source Code Pro', monospace;
   font-size: 3em
   margin-bottom: 10px
 }
