re-do home page

--- a/app/assets/styl/index.styl
+++ b/app/assets/styl/index.styl
@@ -1,3 +1,47 @@
+.left-half {
+  height: 40vh
+  display: block
+  font-family: 'Source Code Pro', monospace;
+  font-size: 3.5em
+  color: #d8bbc4
+  text-align: center
+  padding-top: 20vh
+  background-color: #e69e9e
+}
+
+.container {
+  display: inline-block
+  width: 49%
+}
+
+.footer {
+  position: fixed
+  bottom: 50px
+  .city {
+    font-size: 1em;
+    color: $darkest-grey
+    letter-spacing: 0.065em
+    font-family: 'Montserrat', sans-serif
+    padding-left: 40px
+    text-align: left
+  }
+}
+
+.right-half {
+  height: 40vh
+  font-size: 3.5em
+  font-family: 'Source Code Pro', monospace;
+  display: block
+  padding-top: 20vh
+  color: #e69e9e
+  text-align: center
+  background-color: #d8bbc4
+}
+
+.pull-right {
+  float: right
+}
+
 .short-bio {
   position: relative
   background-color: $darkest-grey
@@ -5,7 +49,6 @@
   display: inline-block
   font-family: 'Source Code Pro', monospace;
   line-height: 1.5
-  margin-top: 200px
   padding: 5px 15px
 }
 
