Clean up styl section and split into directories

--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -42,10 +42,18 @@ p {
   font-size: 1em;
   line-height: 1.5;
 }
+
+a {
+  text-decoration: none
+  color: red
+
+}
+
 li {
   font-family: 'Montserrat', sans-serif
   font-size: 1em;
 }
+
 .portfolio-site {
   background-color: #f7f7f7
   margin: 0 20px
