--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -1,19 +1,22 @@
 .footer {
   position: fixed
-  bottom: 50px
+  bottom: 20px
+  font-size: 1em
 
   .city {
-    font-size: 1em;
+    font-size: 0.9em;
     color: $darkest-grey
     letter-spacing: 0.065em
     font-family: 'Montserrat', sans-serif
     text-align: left
     display: inline-block
     padding-right: 20px
+    animation: fadein 2s
   }
 
   .email {
     display: inline-block
     font-family: 'Source Code Pro', monospace;
+    color: #e69e9e
   }
 }
