add top to fake terminal

--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -15,8 +15,23 @@ $keyframe-name = fadein
     background-color: #dfe0ea;
   }
 }
+.cursor-row {
+  height: 2em
+  display: block
+  font-family: 'Source Code Pro', monospace;
+  font-size: 1em
+  color: #56708c
+  background-color: #e8e5e5
+  transition: background-color 0.4s
 
+
+
+}
+.cursor {
+
+}
 .container {
+  border-top: 25px solid #4d5867
   display: inline-block
   width: 49%
   background-color: #4d5867
