--- a/app/assets/styl/art/art_section.styl
+++ b/app/assets/styl/art/art_section.styl
@@ -39,13 +39,15 @@
   height: 200px
   margin: 0 10px
 }
-
+.image-container {
+  position: absolute
+  top: 0
+  right: 0
+  height: 100vh
+}
 .portfolio-large {
-  display: inline-block
-  float: right
-  margin-right: 35px;
-
-
+  width: 50vw
+  height: auto
 }
 /*==================================================
  * Effect 7
