Re-do home design

--- a/app/assets/styl/art/art_section.styl
+++ b/app/assets/styl/art/art_section.styl
@@ -41,8 +41,8 @@
 }
 .image-container {
   position: absolute
-  top: 0
-  right: 0
+  top: 80px
+  right: 80px
   height: 100vh
 }
 .portfolio-large {
@@ -86,7 +86,7 @@
 }
 
 .details-panel {
-  width: 45vw;
+  width: 20vw;
   margin-top: 95px;
 }
 
