--- a/app/assets/styl/widgets/nav_bar.styl
+++ b/app/assets/styl/widgets/nav_bar.styl
@@ -9,18 +9,20 @@
   width: 100%
   height: 10%
   left: 10px
-  padding-top: 12px;
+  padding-top: 17px;
 
   .name {
-    font-size: 1em;
-    color: $darkest-grey
+    font-size: 1.6em;
+    line-height: 1.3
+    color: $white
     letter-spacing: 0.065em
-    font-family: 'Montserrat', sans-serif
-    padding-left: 40px
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400
+    padding-left: 20px
     text-align: left
     a {
       text-decoration: none
-      color: $darkest-grey
+      color: $white
     }
   }
 }
@@ -28,8 +30,9 @@
 .section {
   position: fixed
   right: 53px
-  top: 29px
-  font-family: 'Montserrat', sans-serif
+  top: 60px
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400
   font-size: 0.9em
   a {
     text-decoration: none
