--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -1,24 +1,18 @@
-// font-family: 'Prata', serif;
-// font-family: 'VT323', monospace;
-// font-family: 'Montserrat', sans-serif;
-// font-family: 'Source Code Pro', monospace;
+// Roboto:100,400,400i,900
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'VT323', monospace;
+  font-family: 'Roboto', sans-serif;
 }
 h1 {
-  font-family: 'Source Code Pro', monospace;
   font-size: 3em
   margin-bottom: 10px
 }
 h2 {
-  font-family: 'VT323', monospace
   font-size: 2.25em
   margin-bottom: 10px
 }
 h3 {
-  font-family: 'Montserrat', sans-serif
-  font-size: 1.75em
+  font-size: 1.5em
   margin-bottom: 24px
 }
 h4 {
@@ -30,7 +24,6 @@ h5 {
   margin-bottom: 10px
 }
 h6 {
-  font-family: 'Montserrat', sans-serif
   letter-spacing: 1
   color: #9977bd
   font-size: 0.75em
@@ -38,9 +31,9 @@ h6 {
 }
 
 p {
-  font-family: 'Source Code Pro', monospace;
-  font-size: 1em;
-  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.9em;
+  line-height: 1.4;
 }
 
 a {
@@ -48,17 +41,14 @@ a {
 }
 
 li {
-  font-family: 'Montserrat', sans-serif
+  font-family: 'Roboto', sans-serif;
   font-size: 1em;
 }
 
-.portfolio-site {
-  background-color: #f7f7f7
-  margin: 0 20px
-}
+
 
 main{
-  padding: 0 30px
+
 }
 
 .right{
