--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -1,14 +1,14 @@
 .footer {
   position: fixed
-  bottom: 20px
-  left: 50px
+  bottom: 23px
+  left: 32px
   font-size: 1em
 
   .city {
     font-size: 0.9em;
     color: $darkest-grey
     letter-spacing: 0.065em
-    font-family: 'Montserrat', sans-serif
+    font-family: 'Roboto', sans-serif;
     text-align: left
     display: inline-block
     padding-right: 8px
@@ -17,7 +17,7 @@
 
   .email {
     display: inline-block
-    font-family: 'Source Code Pro', monospace;
-    color: #e69e9e
+    font-family: 'Roboto', sans-serif
+    color: #f9eec9
   }
 }
