--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -1,23 +1,14 @@
 .footer {
   position: fixed
-  bottom: 23px
+  bottom: 12px
   left: 32px
   font-size: 1em
 
-  .city {
-    font-size: 0.9em;
-    color: $darkest-grey
-    letter-spacing: 0.065em
-    font-family: 'Roboto', sans-serif;
-    text-align: left
-    display: inline-block
-    padding-right: 8px
-    animation: fadein 2s
-  }
-
   .email {
     display: inline-block
-    font-family: 'Roboto', sans-serif
-    color: #f9eec9
+    font-family: 'Amiri', serif
+    letter-spacing: 2px
+    line-height: 2.1
+    color: $darkest-grey
   }
 }
