--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -1,28 +1,35 @@
-// Roboto:100,400,400i,900
+// font-family: 'Amiri', serif;
+// font-family: 'Open Sans', sans-serif;
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
+
 h1 {
   font-size: 3em
   margin-bottom: 10px
 }
+
 h2 {
   font-size: 2.25em
   margin-bottom: 10px
 }
+
 h3 {
   font-size: 1.5em
   margin-bottom: 24px
 }
+
 h4 {
   font-size: 1.125em
   margin-bottom: 10px
 }
+
 h5 {
   font-size: 1em
   margin-bottom: 10px
 }
+
 h6 {
   letter-spacing: 1
   color: #9977bd
@@ -31,7 +38,7 @@ h6 {
 }
 
 p {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Amiri', serif;
   font-size: 0.9em;
   line-height: 1.4;
 }
