--- a/app/assets/styl/widgets/nav_bar.styl
+++ b/app/assets/styl/widgets/nav_bar.styl
@@ -1,44 +1,44 @@
 .nav {
-  width: 100%
-  position: absolute
-  z-index: 100
-}
-
-.header {
   position: fixed
   width: 100%
   height: 10%
-  left: 10px
-  padding-top: 17px;
+  padding-top: 260px
+  padding-left: 30px
+
 
   .name {
-    font-size: 1.6em;
-    line-height: 1.3
-    color: $white
-    letter-spacing: 0.065em
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400
-    padding-left: 20px
-    text-align: left
+    font-size: 1em
+    letter-spacing: 2px
+    display: inline-block
+
+    a {
+      font-family: 'Open Sans', sans-serif
+      text-decoration: none
+      color: $darkest-grey
+    }
+  }
+
+  .section {
+    position: fixed
+    right: 53px
+    font-family: 'Amiri', serif;
+    font-size: 1em
+    letter-spacing: 2px;
+    display: inline-block
+
     a {
       text-decoration: none
-      color: $white
+      color: $darkest-grey
+    }
+
+    &.art{
+      right: 250px
     }
   }
 }
 
-.section {
-  position: fixed
-  right: 53px
-  top: 60px
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400
-  font-size: 0.9em
-  a {
-    text-decoration: none
-    color: $darkest-grey
-  }
-  &.art{
-    right: 186px
-  }
-}
+
+
+
+
+
