--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -6,7 +6,7 @@
 
   .email {
     display: inline-block
-    font-family: 'Amiri', serif
+    font-family: 'Open Sans', sans-serif
     letter-spacing: 2px
     line-height: 2.1
     color: $darkest-grey
