--- a/app/assets/styl/variables.styl
+++ b/app/assets/styl/variables.styl
@@ -1,22 +1,15 @@
 $light-grey = #f2f3f5
+
+// Type
 $darkest-grey = #616a77
+$pink = #ffbde2
+
+$serif = 'Amiri', serif
+$san-serif = 'Open Sans', sans-serif
+
 $white = #f9f9f9
 
-.red {
-  background-color: red
-}
 
-.yellow {
-  background-color: yellow
-}
-
-.blue {
-  background-color: blue
-}
-
-.green {
-  background-color: green
-}
 
 // Pixels (px)
 // Use for: hairline borders and general elements when creating fixed-width designs; values for CSS shadow displacement. Avoid using in @media breakpoints, as doing so reinforces the tendency to create for device dimensions, rather than where your design needs to adapt. Use rem or em instead.
