--- a/app/assets/styl/widgets/nav_bar.styl
+++ b/app/assets/styl/widgets/nav_bar.styl
@@ -5,14 +5,13 @@
   padding-top: 260px
   padding-left: 30px
 
-
   .name {
     font-size: 1em
     letter-spacing: 2px
     display: inline-block
 
     a {
-      font-family: 'Open Sans', sans-serif
+      font-family: $san-serif
       text-decoration: none
       color: $darkest-grey
     }
@@ -21,7 +20,7 @@
   .section {
     position: fixed
     right: 53px
-    font-family: 'Amiri', serif;
+    font-family: $serif
     font-size: 1em
     letter-spacing: 2px;
     display: inline-block
@@ -36,9 +35,3 @@
     }
   }
 }
-
-
-
-
-
-
