--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -2,11 +2,12 @@
 // font-family: 'Open Sans', sans-serif;
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: $sans-serif
 }
 
 h1 {
   font-size: 3em
+  color: $pink
   margin-bottom: 10px
 }
 
@@ -32,15 +33,15 @@ h5 {
 
 h6 {
   letter-spacing: 1
-  color: #9977bd
   font-size: 0.75em
   margin-bottom: 10px
 }
 
 p {
-  font-family: 'Amiri', serif;
-  font-size: 0.9em;
-  line-height: 1.4;
+  color: $darkest-grey
+  font-family: $serif
+  font-size: 1em
+  line-height: 1.5
 }
 
 a {
@@ -48,11 +49,9 @@ a {
 }
 
 li {
-  font-family: 'Roboto', sans-serif;
+  font-family: $serif
   font-size: 1em;
 }
-
-
 
 main{
 
