--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -1,58 +1,16 @@
 .home {
   box-shadow: inset 0 3px 14px 0 rgba(0,0,0,0.19)
   height: 100vh
-  .hero {
-    padding-top: 60px
-    padding-left: 30px
-  }
-  .container-left {
-    position: absolute
-    z-index: -2
-    background-color: #f7f7f7
-    width: 50vw
-    height: 100%
-    float: left
-  }
-
-  .container-right {
-    position: absolute
-    z-index: -2
-
-    right: 0
-    width: 50vw
-    height: 100%
-    background-color: #f7f7f7
-
-  }
-
-  .faces {
-    fixed: bottom
-    right: 50vw
-    margin-right: 3px
-  }
-
-  .face {
-    position: relative
-    float: right
-    width: 33%
-
-    &.two {
-      left: 100px
-    }
-    &.three {
-      left: 13.5vw
-    }
-  }
 
   .profession {
-    color: #ffbde2
+    color: $pink
     font-size: 4.3em
-    font-family: 'Open Sans', sans-serif
+    font-family: $san-serif
+    font-style: italic
+    font-weight: 600
     line-height: 1.2
     margin-left: -6px
     padding-top: 73px
-    font-weight: 600
-    font-style: italic
 
     &:last-of-type {
       padding-top: 0
@@ -60,31 +18,13 @@
     }
   }
 
-  .main-card {
-    position: relative
-    height: 40vh
-    width: 35vw
-    margin-top: 31vh
-    margin-right: 3px
-    float: right
-  }
-
   .bio {
     position: relative
-
     width: 33vw
-
-    font-family: 'Amiri', serif
-    color: $darkest-grey
-    font-size: 1em
-    line-height: 2
     margin-left: 111px
-  }
 
-  .container {
-    border-top: 25px solid #4d5867
-    display: inline-block
-    width: 49%
-    background-color: #4d5867
+    .company {
+      font-style: italic
+    }
   }
 }
