--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -5,10 +5,14 @@
   font-size: 0.9em
 
   .email {
-    display: inline-block
-    font-family: 'Open Sans', sans-serif
+    display: block
+    font-family: $san-serif
     letter-spacing: 0px
     line-height: 2.1
+    color: $darkest-grey
+  }
+
+  .sparkle {
     color: $darkest-grey
   }
 }
