Adjust design and re-factor

--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -1,27 +1,27 @@
 .home {
   box-shadow: inset 0 3px 14px 0 rgba(0,0,0,0.19)
-  height: 100vh
-
-  .profession {
-    color: $pink
-    font-size: 4.3em
-    font-family: $san-serif
-    font-style: italic
-    font-weight: 600
-    line-height: 1.2
-    margin-left: -6px
-    padding-top: 73px
-
-    &:last-of-type {
-      padding-top: 0
-      margin-bottom: 100px
-    }
-  }
+  padding: 80px 0
+  background-color: $light-grey
 
   .bio {
     position: relative
-    width: 33vw
-    margin-left: 111px
+    width: 50vw
+    margin: 0 auto
+
+    .profession {
+      color: $pink
+      font-size: 4.3em
+      font-family: $san-serif
+      font-style: italic
+      font-weight: 600
+      line-height: 1.2
+      margin-left: -6px
+
+      &:last-of-type {
+        padding-top: 0
+        margin-bottom: 60px
+      }
+    }
 
     .company {
       font-style: italic
