--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -53,20 +53,13 @@ li {
   font-size: 1em;
 }
 
-main{
+.main-interface {
 
-}
-
-.right{
-  padding-right: 20px
-  height: 100%
-  float: right
 }
 
 footer {
   position: fixed
   background-color: white
-  height: 4vh
   width: 100%
   bottom: 0
 }
