--- a/app/assets/styl/variables.styl
+++ b/app/assets/styl/variables.styl
@@ -1,4 +1,5 @@
-$light-grey = #f2f3f5
+// Background
+$light-grey = #f9f9f9
 
 // Type
 $darkest-grey = #616a77
@@ -7,7 +8,6 @@ $pink = #ffbde2
 $serif = 'Amiri', serif
 $san-serif = 'Open Sans', sans-serif
 
-$white = #f9f9f9
 
 
 
