--- a/app/assets/styl/widgets/header.styl
+++ b/app/assets/styl/widgets/header.styl
@@ -23,7 +23,7 @@
 
     .section {
       display: inline-block
-      font-family: $serif
+      font-family: $san-serif
       font-size: 1.02em
       letter-spacing: 2px
       padding-right: 40px
