Home page style updates

--- a/app/assets/styl/variables.styl
+++ b/app/assets/styl/variables.styl
@@ -7,7 +7,7 @@ $darkest-grey = #616a77
 $med-grey = #b3bbc7
 $pink = #ffbde2
 
-$serif = 'Amiri', serif
+$serif = 'VT323', monospace
 $san-serif = 'Open Sans', sans-serif
 
 
