--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -1,4 +1,4 @@
-// font-family: 'Amiri', serif;
+// font-family: 'VT323', monospace;
 // font-family: 'Open Sans', sans-serif;
 
 h1, h2, h3, h4, h5, h6 {
@@ -40,7 +40,7 @@ h6 {
 p {
   color: $darkest-grey
   font-family: $serif
-  font-size: 1em
+  font-size: 1.5em
   line-height: 1.5
 }
 
@@ -53,22 +53,17 @@ li {
   font-size: 1em;
 }
 
-#app {
+body {
+  background-color: #f5f5f5
+}
 
+#app {
   box-shadow: inset 0 3px 14px 0 rgba(0,0,0,0.19)
   background-color: $light-grey
-
   width: 100vw
 }
 
 .main-interface {
-  padding: 80px 0
-  background-color: #f5f5f5
+  padding-top: 15vh
 }
 
-footer {
-  position: fixed
-  background-color: white
-  width: 100%
-  bottom: 0
-}
