--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -1,18 +1,20 @@
 .footer {
-  position: fixed
-  bottom: 12px
-  left: 32px
+  background-color: white
+  bottom: 0
   font-size: 0.9em
+  height: 3em
+  padding: 20px 32px
+  position: fixed
+  width: 100vw
 
   .email {
-    display: block
-    font-family: $san-serif
-    letter-spacing: 0px
-    line-height: 2.1
     color: $darkest-grey
+    font-family: $serif
+    letter-spacing: 1px
   }
 
   .sparkle {
-    color: $darkest-grey
+    padding-right: 0.5em
+    color: $pink
   }
 }
