--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -4,6 +4,12 @@
     width: 50vw
     margin: 0 auto
 
+    .front-image {
+      float: right
+      height: 100px
+      width: 100px
+    }
+
     .profession {
       color: $pink
       font-size: 4.3em
