Add in dark pink

--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -18,6 +18,9 @@
       font-weight: 600
       line-height: 1.2
       margin-left: -6px
+      .darken {
+        color: $dark-pink
+      }
 
       &:last-of-type {
         padding-top: 0
