--- a/app/assets/styl/variables.styl
+++ b/app/assets/styl/variables.styl
@@ -7,6 +7,7 @@ $transparent-white = rgba(255, 255, 255, 0.69);
 $darkest-grey = #616a77
 $med-grey = #b3bbc7
 $pink = #ffbde2
+$dark-pink = #f796cc
 
 $serif = 'VT323', monospace
 $san-serif = 'Open Sans', sans-serif
