Add in styling for routing

--- a/app/assets/styl/widgets/header.styl
+++ b/app/assets/styl/widgets/header.styl
@@ -1,5 +1,4 @@
 .header {
-  position: fixed
   width: 100%
   margin: 20px 0
 
@@ -28,7 +27,13 @@
       padding-right: 40px
       a {
         color: $darkest-grey
+        &.selected {
+          color: $pink
+          style: underline
+        }
       }
     }
+
+
   }
 }
