--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -1,6 +1,8 @@
 .home {
+  width: 70%
+  float: right
   .bio {
-    position: relative
+    position: absolute
     width: 50vw
     margin: 0 auto
     padding-top: 50px
