--- a/app/assets/styl/art/art_section.styl
+++ b/app/assets/styl/art/art_section.styl
@@ -1,51 +1,23 @@
-.gallery-header-row {
-  width: 100%
-  height: 8%
+.art {
+  .gallery {
+    float: right
+    padding: 0 6vw 100px 0
+    width: 70%
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+    align-content: flex-start
+
+    .index-frame {
+      padding: 5px
+      margin: 5px
+      box-shadow: 3px 3px rgba(189, 209, 255, 0.31)
+      background-color: #f9f9f9
+    }
+  }
 }
 
-.indices {
-  position: relative
-  display: flex
-  flex-wrap: wrap
-  justify-content: space-between
-  align-content: flex-end
-}
-
-.portfolio-index {
-  width: 30px
-  margin: 10px
-}
-.effect7 {
-  padding: 10px
-  margin: 5px
-  box-shadow: 3px 3px rgba(189, 209, 255, 0.31)
-  background-color: #f9f9f9
-}
-.selected-panel {
-  width: 100%
-  height: 60%
-}
-
-.gallery-wrapper {
-  margin-top: 20px
-  display: inline-block
-  position: absolute
-}
-
-.gallery {
-  background-color: #f5f5f5
-  padding: 0 6vw 100px 9vw
-  display: flex
-  flex-wrap: wrap
-  justify-content: space-between
-  align-content: flex-start
-}
-
-.portfolio-item {
-  height: 200px
-  margin: 0 10px
-}
-
+// show
 .details-panel {
   width: 20vw;
   margin-top: 95px;
