--- a/app/assets/styl/widgets/header.styl
+++ b/app/assets/styl/widgets/header.styl
@@ -1,6 +1,6 @@
 .header {
   width: 100%
-  margin: 20px 0
+  padding: 20px 0
 
   .name {
     font-size: 1em
@@ -22,11 +22,13 @@
     .section {
       display: inline-block
       font-family: $san-serif
-      font-size: 1.02em
+      font-size: 1em
       letter-spacing: 2px
       padding-right: 40px
+
       a {
         color: $darkest-grey
+
         &.selected {
           color: $pink
           style: underline
