--- a/app/assets/styl/art/art_section.styl
+++ b/app/assets/styl/art/art_section.styl
@@ -1,7 +1,7 @@
 .art {
   .gallery {
     float: right
-    padding: 0 6vw 100px 0
+    padding: 20px 90px 100px 0
     width: 70%
     display: flex
     flex-wrap: wrap
