--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -1,12 +1,9 @@
 .home {
   width: 70%
   float: right
-  .bio {
-    position: absolute
-    width: 50vw
-    margin: 0 auto
-    padding-top: 50px
+  padding: 20px 90px 0 0
 
+  .bio {
     .front-image {
       float: right
       height: 100px
@@ -20,7 +17,7 @@
       font-style: italic
       font-weight: 600
       line-height: 1.2
-      margin-left: -6px
+
       .darken {
         color: $dark-pink
       }
