--- a/app/assets/styl/widgets/header.styl
+++ b/app/assets/styl/widgets/header.styl
@@ -1,6 +1,6 @@
 .header {
   width: 100%
-  padding: 20px 0
+  padding: 20px 0 35px
 
   .name {
     font-size: 1em
@@ -16,15 +16,14 @@
   }
 
   .nav-items {
-    width: 50vw
-    margin: 0 auto
-
+    float: right
+    padding-right: 90px
     .section {
       display: inline-block
       font-family: $san-serif
       font-size: 1em
       letter-spacing: 2px
-      padding-right: 40px
+      padding-left: 40px
 
       a {
         color: $darkest-grey
