Begin establishing consistency across styles via variables

--- a/app/assets/styl/art/art_section.styl
+++ b/app/assets/styl/art/art_section.styl
@@ -1,8 +1,8 @@
 .art {
   .gallery {
     float: right
-    padding: 20px 90px 100px 0
-    width: 70%
+    padding: $main-content-margin-top $main-content-margin-right 100px 0
+    width: $main-content-width
     display: flex
     flex-wrap: wrap
     justify-content: space-between
@@ -12,7 +12,7 @@
       padding: 5px
       margin: 5px
       box-shadow: 3px 3px rgba(189, 209, 255, 0.31)
-      background-color: #f9f9f9
+      background-color: $light-grey
     }
   }
 }
