--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -1,18 +1,15 @@
-// font-family: 'VT323', monospace;
-// font-family: 'Open Sans', sans-serif;
-
 h1, h2, h3, h4, h5, h6 {
   font-family: $sans-serif
 }
 
 h1 {
-  font-size: 3em
-  color: $pink
+  font-size: $type-x-large
+  color: $primary-color-0
   margin-bottom: 10px
 }
 
 h2 {
-  font-size: 2.25em
+  font-size: $type-large
   margin-bottom: 10px
 }
 
@@ -27,7 +24,7 @@ h4 {
 }
 
 h5 {
-  font-size: 1em
+  font-size: $type-medium
   margin-bottom: 10px
 }
 
@@ -50,7 +47,7 @@ a {
 
 li {
   font-family: $serif
-  font-size: 1em;
+  font-size: $type-medium
 }
 
 body {
