--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -1,7 +1,7 @@
 .home {
-  width: 70%
+  width: $main-content-width
   float: right
-  padding: 20px 90px 0 0
+  padding: 20px $main-content-margin-right 0 0
 
   .bio {
     .front-image {
@@ -11,15 +11,15 @@
     }
 
     .profession {
-      color: $pink
-      font-size: 4.3em
+      color: $primary-color-0
+      font-size: $type-xx-large
       font-family: $san-serif
       font-style: italic
       font-weight: 600
       line-height: 1.2
 
       .darken {
-        color: $dark-pink
+        color: $primary-color-1
       }
 
       &:last-of-type {
