--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -1,7 +1,7 @@
 .footer {
   background-color: $transparent-white
   bottom: 0
-  font-size: 0.9em
+  font-size: $type-small
   height: 3em
   padding: 20px 32px
   position: fixed
@@ -10,11 +10,11 @@
   .email {
     color: $darkest-grey
     font-family: $serif
-    letter-spacing: 1px
+    letter-spacing: $san-serif-letterspacing
   }
 
   .sparkle {
     padding-right: 0.5em
-    color: $dark-pink
+    color: $primary-color-1
   }
 }
