--- a/app/assets/styl/widgets/sidebar.styl
+++ b/app/assets/styl/widgets/sidebar.styl
@@ -1,18 +1,18 @@
 .sidebar {
-  margin-top: 60vh
-  margin-left: 30px
+  margin-top: $main-content-margin-top
+  margin-left: $margin-left
   width: 200px
   position: fixed
 
   .filter-option {
     font-family: $serif
     color: $med-grey
-    letter-spacing: 1px
+    letter-spacing: $serif-letterspacing
     margin-bottom: 8px
 
     &:hover {
       color: #9977bd
-      box-shadow: 3px 3px $pink
+      box-shadow: 3px 3px $primary-color-0
     }
   }
 }
