--- a/app/assets/styl/widgets/social_bar.styl
+++ b/app/assets/styl/widgets/social_bar.styl
@@ -1,6 +1,6 @@
 .social-wrapper {
   position: fixed
-  right: 50px
+  right: $margin-right
   bottom: 90px
   display: flex
   flex-direction: column
@@ -11,5 +11,9 @@
     width: 1.3em
     margin-bottom: 10px
     fill: $darkest-grey
+
+    &:hover {
+      fill: $secondary-color-0
+    }
   }
 }
