--- a/app/assets/styl/variables.styl
+++ b/app/assets/styl/variables.styl
@@ -1,17 +1,54 @@
-// Background
+// CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
+// OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+// LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL
+// OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+// RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
+
+$transparent-white = rgba(255, 255, 255, 0.40)
+
 $light-grey = #f9f9f9
-$transparent-white = rgba(255, 255, 255, 0.69);
 
-
-// Type
-$darkest-grey = #616a77
 $med-grey = #b3bbc7
+
+$darkest-grey = #616a77
+
 $pink = #ffbde2
 $dark-pink = #f796cc
+
+$primary-color-0 = $pink
+$primary-color-1 = $dark-pink
+
+$secondary-color-0 = #76d4da
+
+// TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
+// YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
+// PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
+// EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
 
 $serif = 'VT323', monospace
 $san-serif = 'Open Sans', sans-serif
 
+$serif-letterspacing = 1px
+$san-serif-letterspacing = 2px
+
+$type-small = 0.9em
+$type-medium = 1em
+$type-large = 2em
+$type-x-large = 3em
+$type-xx-large = 4.3em
+
+// SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
+// PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
+// AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+// CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
+// EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
+
+$margin-left = 30px
+$margin-right = 50px
+
+$main-content-width = 70%
+$main-content-margin-right = 90px
+$main-content-margin-top = 20px
 
 
 
