Clean up styles for art pages

--- a/app/assets/styl/art/art_index.styl
+++ b/app/assets/styl/art/art_index.styl
@@ -8,17 +8,11 @@
     justify-content: space-between
     align-content: flex-start
 
-    .index-frame {
+    .portfolio-image {
       padding: 5px
       margin: 5px
       box-shadow: 3px 3px rgba(189, 209, 255, 0.31)
       background-color: $light-grey
     }
   }
-}
-
-// show
-.details-panel {
-  width: 20vw;
-  margin-top: 95px;
 }
