Continue universalizing styles - set up show page

--- a/app/assets/styl/art/art_index.styl
+++ b/app/assets/styl/art/art_index.styl
@@ -1,8 +1,8 @@
-.art {
+.art-index {
+  float: right;
+
   .gallery {
-    float: right
-    padding: $main-content-margin-top $main-content-margin-right 100px 0
-    width: $main-content-width
+    padding: $main-content-margin-top $main-content-margin-right 100px $margin-left
     display: flex
     flex-wrap: wrap
     justify-content: space-between
