--- a/app/assets/styl/art/art_show.styl
+++ b/app/assets/styl/art/art_show.styl
@@ -1,3 +1,19 @@
 .art-show {
-  float: right;
+  .production-details {
+    border-top: 1px solid $light-med-grey
+    padding-top: $tiny-space
+    margin-top: $xlarge-space
+    font-family: $sans-serif
+  }
+
+  .stat {
+    float: right
+    font-size: $type-xx-small
+  }
+
+  .large-image {
+    float: right
+    max-width: 100%
+    max-height: 80vh
+  }
 }
