--- a/app/assets/styl/widgets/header.styl
+++ b/app/assets/styl/widgets/header.styl
@@ -3,14 +3,14 @@
   width: 100%
 
   .name {
-    font-size: $type-medium
+    font-size: $type-small
     left: 30px
     letter-spacing: $serif-letterspacing
     position: absolute
 
     a {
       color: $darkest-grey
-      font-family: $san-serif
+      font-family: $sans-serif
       text-decoration: none
 
       &:hover {
@@ -26,8 +26,8 @@
     .section {
       color: $darkest-grey
       display: inline-block
-      font-family: $san-serif
-      font-size: $type-medium
+      font-family: $serif
+      font-size: $type-small
       letter-spacing: $serif-letterspacing
       padding-left: 40px
 
