--- a/app/assets/styl/home/home.styl
+++ b/app/assets/styl/home/home.styl
@@ -1,35 +1,37 @@
-.home {
-  width: $main-content-width
-  float: right
-  padding: 20px $main-content-margin-right 0 0
+.bio {
+  .front-image {
+    float: right
+    height: 100px
+    width: 100px
+  }
 
-  .bio {
-    .front-image {
-      float: right
-      height: 100px
-      width: 100px
+  .opening-summary {
+    color: $darkest-grey
+    font-family: $serif
+    font-size: $type-medium
+    line-height: 1.5
+    margin-top: $small-space
+  }
+
+  .profession {
+    color: $primary-color-0
+    font-size: $type-xx-large
+    font-family: $sans-serif
+    font-style: italic
+    font-weight: 600
+    line-height: 1.2
+
+    .darken {
+      color: $primary-color-1
     }
 
-    .profession {
-      color: $primary-color-0
-      font-size: $type-xx-large
-      font-family: $san-serif
-      font-style: italic
-      font-weight: 600
-      line-height: 1.2
-
-      .darken {
-        color: $primary-color-1
-      }
-
-      &:last-of-type {
-        padding-top: 0
-        margin-bottom: 36px
-      }
+    &:last-of-type {
+      padding-top: 0
+      margin-bottom: 36px
     }
+  }
 
-    .company {
-      font-style: italic
-    }
+  .company {
+    font-style: italic
   }
 }
