--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -1,19 +1,23 @@
 .footer {
-  background-color: $transparent-white
   bottom: 0
-  font-size: $type-small
-  height: 3em
+  font-size: $type-medium
+  height: 1.25em
   padding: 20px 32px
   position: fixed
   width: 100vw
 
   .email {
     color: $darkest-grey
+    display: inline-block
     font-family: $serif
-    letter-spacing: $san-serif-letterspacing
+    letter-spacing: $sans-serif-letterspacing
+    &:hover {
+      color: $secondary-color-0
+    }
   }
 
   .sparkle {
+    display: inline-block
     padding-right: 0.5em
     color: $primary-color-1
   }
