--- a/app/assets/styl/widgets/sidebar.styl
+++ b/app/assets/styl/widgets/sidebar.styl
@@ -1,7 +1,10 @@
 .sidebar {
-  margin-top: $main-content-margin-top
-  margin-left: $margin-left
-  width: 200px
+  background-color: $light-grey
+  height: 100%
+  padding-right: $medium-space
+  padding-top: $main-content-margin-top
+  padding-left: $margin-left
+  width: $sidebar-width
   position: fixed
 
   .filter-option {
