--- a/app/assets/styl/variables.styl
+++ b/app/assets/styl/variables.styl
@@ -53,7 +53,7 @@ $large-space = 50px
 $xlarge-space = 90px
 
 $margin-left = $medium-space
-$margin-right = $large-space
+$margin-right = $medium-space
 
 $main-content-width = 60%
 $main-content-margin-right = 90px
