--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -1,6 +1,6 @@
 .footer {
   bottom: 0
-  font-size: $type-medium
+  font-size: $type-small
   height: 1.25em
   padding: 20px 32px
   position: fixed
@@ -19,6 +19,7 @@
   .sparkle {
     display: inline-block
     padding-right: 0.5em
+    padding-bottom: 4px
     color: $primary-color-1
   }
 }
