Darken index image border on hover

--- a/app/assets/styl/art/art_index.styl
+++ b/app/assets/styl/art/art_index.styl
@@ -13,6 +13,10 @@
       margin: 5px
       box-shadow: 3px 3px rgba(189, 209, 255, 0.31)
       background-color: $light-grey
+      &:hover {
+        transition: box-shadow 2s
+        box-shadow: 3px 3px rgba(120, 132, 158, 0.31)
+      }
     }
   }
 }
