--- a/app/assets/styl/art/art_index.styl
+++ b/app/assets/styl/art/art_index.styl
@@ -8,15 +8,23 @@
     justify-content: space-between
     align-content: flex-start
 
+    .image-wrapper {
+      background-color: $transparent-white
+      height: 110px
+      width: 210px
+      margin: 10px 5px
+      box-shadow: inset 0px 0px 10px rgba(0,0,0,0.28)
+
+      &:hover {
+        background-color: rgba(212, 212, 232, 0.31)
+      }
+    }
+
     .portfolio-image {
-      padding: 5px
+      color: $primary-color-0
       margin: 5px
       box-shadow: 3px 3px rgba(189, 209, 255, 0.31)
       background-color: $light-grey
-      &:hover {
-        transition: box-shadow 2s
-        box-shadow: 3px 3px rgba(120, 132, 158, 0.31)
-      }
     }
   }
 }
