more gallery updates

--- a/app/assets/styl/art/art_index.styl
+++ b/app/assets/styl/art/art_index.styl
@@ -2,7 +2,7 @@
   float: right;
 
   .gallery {
-    padding: $main-content-margin-top $main-content-margin-right 100px $margin-left
+    padding: $main-content-margin-top 82px 100px 22px
     display: flex
     flex-wrap: wrap
     justify-content: space-between
@@ -23,7 +23,6 @@
     .portfolio-image {
       color: $primary-color-0
       margin: 5px
-      box-shadow: 3px 3px rgba(189, 209, 255, 0.31)
       background-color: $light-grey
     }
   }
