Adjust page margins

--- a/app/assets/styl/art/art_index.styl
+++ b/app/assets/styl/art/art_index.styl
@@ -2,7 +2,7 @@
   float: right;
 
   .gallery {
-    padding: $main-content-margin-top 82px 100px 22px
+    padding: $main-content-margin-top 82px 100px
     display: flex
     flex-wrap: wrap
     justify-content: space-between
