--- a/app/assets/styl/widgets/footer.styl
+++ b/app/assets/styl/widgets/footer.styl
@@ -2,7 +2,7 @@
   bottom: 0
   font-size: $type-small
   height: 1.25em
-  padding: 20px 32px
+  padding: 20px $xlarge-space
   position: fixed
   width: 100vw
 
