Update style widths

--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -70,8 +70,8 @@ body {
 }
 
 .main-view {
-  float: right
-  width: $main-content-width
-  padding: $main-content-margin-top $main-content-margin-right 0 0
+  float: left
+  width: 70%
+  padding: $main-content-margin-top $main-content-margin-right 0 $xlarge-space
 }
 
