--- a/app/assets/styl/variables.styl
+++ b/app/assets/styl/variables.styl
@@ -18,7 +18,7 @@ $blue = #96c4f7
 $primary-color-0 = $blue
 $primary-color-1 = darken($primary-color-0, 10%)
 
-$secondary-color-0 = #8bb8bb
+$secondary-color-0 = #87ccac
 $secondary-color-1 = darken($secondary-color-0, 10%)
 
 // TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
@@ -55,7 +55,7 @@ $xlarge-space = 90px
 $margin-left = $medium-space
 $margin-right = $medium-space
 
-$main-content-width = 60%
+$main-content-width = 50%
 $main-content-margin-right = 90px
 $main-content-margin-top = $small-space
 
