Redo styling on home page

--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -64,14 +64,11 @@ body {
 }
 
 #app {
-  box-shadow: inset 0 3px 14px 0 rgba(0,0,0,0.19)
-  background-color: $light-grey
   width: 100vw
 }
 
 .main-view {
-  float: left
+  margin: 0 auto
   width: 70%
-  padding: $main-content-margin-top $main-content-margin-right 0 $xlarge-space
 }
 
