--- a/app/assets/styl/widgets/header.styl
+++ b/app/assets/styl/widgets/header.styl
@@ -1,10 +1,11 @@
 .header {
+  background-color: $light-grey
   padding: 20px 0 35px
   width: 100%
 
   .name {
     font-size: $type-small
-    left: 90px
+    left: 30px
     letter-spacing: $serif-letterspacing
     position: absolute
 
@@ -26,8 +27,8 @@
     .section {
       color: $darkest-grey
       display: inline-block
-      font-family: $serif
-      font-size: $type-small
+      font-family: $sans-serif
+      font-size: $type-x-small
       letter-spacing: $serif-letterspacing
       padding-left: 40px
 
