--- a/app/assets/styl/variables.styl
+++ b/app/assets/styl/variables.styl
@@ -32,13 +32,13 @@ $sans-serif = 'Open Sans', sans-serif
 $serif-letterspacing = 1px
 $sans-serif-letterspacing = 2px
 
-$type-xx-small = 0.9em
-$type-x-small = 1em
-$type-small = 1.25em
-$type-medium = 1.5em
-$type-large = 2em
-$type-x-large = 3em
-$type-xx-large = 4.3em
+$type-xx-small = 0.9rem
+$type-x-small = 1rem
+$type-small = 1.25rem
+$type-medium = 1.5rem
+$type-large = 2rem
+$type-x-large = 3rem
+$type-xx-large = 4.3rem
 
 // SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
 // PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
