--- a/style.styl
+++ b/style.styl
@@ -17,3 +17,7 @@
 
 @import './app/assets/styl/art/art_index.styl'
 @import './app/assets/styl/art/art_show.styl'
+
+@media (max-width: 1024px) {
+  @import './app/assets/styl/mobile/home.styl';
+}
