--- a/app/assets/styl/global.styl
+++ b/app/assets/styl/global.styl
@@ -1,10 +1,15 @@
-h1, h2, h3, h4, h5 {
-  font-family: $sans-serif
+html {
+  font-size: 100%
 }
 
 body {
-  font-family: $sans-serif
+  background-color: #f5f5f5
   color: $darkest-grey
+  font-family: $sans-serif
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: $sans-serif
 }
 
 h1 {
@@ -57,10 +62,6 @@ a {
 li {
   font-family: $serif
   font-size: $type-medium
-}
-
-body {
-  background-color: #f5f5f5
 }
 
 #app {
