--- a/style.styl
+++ b/style.styl
@@ -5,15 +5,15 @@
 @import './app/assets/styl/standards/standardize.styl'
 
 // Theme base
-@import './app/assets/styl/global.styl'
+@import './app/assets/styl/global.css'
 
 // Component styling files
 @import './app/assets/styl/home/home.styl'
 
-@import './app/assets/styl/widgets/sidebar.styl'
+@import './app/assets/styl/widgets/sidebar.css'
 @import './app/assets/styl/widgets/social_bar.styl'
 @import './app/assets/styl/widgets/header.styl'
-@import './app/assets/styl/widgets/footer.styl'
+@import './app/assets/styl/widgets/footer.css'
 
-@import './app/assets/styl/art/art_index.styl'
-@import './app/assets/styl/art/art_show.styl'
+@import './app/assets/styl/art/art_index.css'
+@import './app/assets/styl/art/art_show.css'
