--- a/app/assets/styles/home/home.css
+++ b/app/assets/styles/home/home.css
@@ -1,3 +1,8 @@
+.bio {
+  display: flex;
+  flex-direction: row;
+}
+
 .bio .front-image {
   height: 10vw;
   width: auto;
@@ -19,25 +24,15 @@
   justify-content: space-between;
 }
 
-.bio .title {
+.bio .classification {
+  background-color: var(--main-gray);
   color: var(--light-grey);
-  font-size: var(--type-xx-large);
   font-family: var(--sans-serif);
-  background-color: #2f2f2f;
+  font-size: var(--type-xx-large);
   padding: 40px;
-  margin-top: 50px;
 }
 
 .bio .profession {
   font-weight: 600;
   line-height: 1.2;
-  text-align: center;
-}
-
-.bio .profession .darken {
-  color: var(--primary-color-1);
-}
-
-.bio .company {
-  font-style: italic;
 }
